// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionRow when passed a \`collapsible\` prop should not render a caret when not collapsible 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-3 pr-3 mb-0.5 flex items-center justify-between space-x-3 rounded-lg leading-none text-base text-white pl-3 bg-gray-500"
      >
        <div
          class="w-full"
        >
          Label
        </div>
      </div>
      <div
        aria-hidden="false"
        class="rah-static rah-static--height-auto "
        style="height: auto; overflow: visible;"
      >
        <div>
          Hello, World!
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-3 pr-3 mb-0.5 flex items-center justify-between space-x-3 rounded-lg leading-none text-base text-white pl-3 bg-gray-500"
    >
      <div
        class="w-full"
      >
        Label
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto "
      style="height: auto; overflow: visible;"
    >
      <div>
        Hello, World!
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AccordionRow when passed a \`collapsible\` prop should render a caret for expanding and collapsing when collapsible 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-3 pr-3 mb-0.5 flex items-center justify-between space-x-3 rounded-lg leading-none text-base text-white select-none pl-3 bg-gray-500 hover:bg-gray-400 cursor-pointer"
        role="button"
      >
        <div
          class="shrink-0 w-4 text-gray-50"
        >
          <svg
            class="transform rotate-90 w-5 h-5 transition-transform"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16 12l-6 6V6z"
              />
            </g>
          </svg>
        </div>
        <div
          class="w-full"
        >
          Label
        </div>
      </div>
      <div
        aria-hidden="false"
        class="rah-static rah-static--height-auto "
        style="height: auto; overflow: visible;"
      >
        <div>
          Hello, World!
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-3 pr-3 mb-0.5 flex items-center justify-between space-x-3 rounded-lg leading-none text-base text-white select-none pl-3 bg-gray-500 hover:bg-gray-400 cursor-pointer"
      role="button"
    >
      <div
        class="shrink-0 w-4 text-gray-50"
      >
        <svg
          class="transform rotate-90 w-5 h-5 transition-transform"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16 12l-6 6V6z"
            />
          </g>
        </svg>
      </div>
      <div
        class="w-full"
      >
        Label
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto "
      style="height: auto; overflow: visible;"
    >
      <div>
        Hello, World!
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AccordionRow when passed an \`active\` prop should be highlighted 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-3 pr-3 mb-0.5 flex items-center justify-between space-x-3 rounded-lg leading-none text-base text-white select-none !bg-cyan !bg-opacity-10 pl-3 bg-gray-500 hover:bg-gray-400 cursor-pointer"
        role="button"
      >
        <div
          class="shrink-0 w-4 text-gray-50"
        >
          <svg
            class="transform rotate-90 w-5 h-5 transition-transform"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16 12l-6 6V6z"
              />
            </g>
          </svg>
        </div>
        <div
          class="w-full"
        >
          Label
        </div>
      </div>
      <div
        aria-hidden="false"
        class="rah-static rah-static--height-auto "
        style="height: auto; overflow: visible;"
      >
        <div>
          Hello, World!
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-3 pr-3 mb-0.5 flex items-center justify-between space-x-3 rounded-lg leading-none text-base text-white select-none !bg-cyan !bg-opacity-10 pl-3 bg-gray-500 hover:bg-gray-400 cursor-pointer"
      role="button"
    >
      <div
        class="shrink-0 w-4 text-gray-50"
      >
        <svg
          class="transform rotate-90 w-5 h-5 transition-transform"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16 12l-6 6V6z"
            />
          </g>
        </svg>
      </div>
      <div
        class="w-full"
      >
        Label
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto "
      style="height: auto; overflow: visible;"
    >
      <div>
        Hello, World!
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AccordionRow when passed an \`href\` prop should render as a link 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        href="/to"
      >
        <div
          class="py-3 pr-3 mb-0.5 flex items-center justify-between space-x-3 rounded-lg leading-none text-base text-white select-none pl-3 bg-gray-500 hover:bg-gray-400 cursor-pointer"
          role="button"
        >
          <div
            class="shrink-0 w-4 text-gray-50"
          >
            <svg
              class="transform rotate-90 w-5 h-5 transition-transform"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g>
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M16 12l-6 6V6z"
                />
              </g>
            </svg>
          </div>
          <div
            class="w-full"
          >
            Label
          </div>
        </div>
        <div
          aria-hidden="false"
          class="rah-static rah-static--height-auto "
          style="height: auto; overflow: visible;"
        >
          <div>
            Hello, World!
          </div>
        </div>
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      href="/to"
    >
      <div
        class="py-3 pr-3 mb-0.5 flex items-center justify-between space-x-3 rounded-lg leading-none text-base text-white select-none pl-3 bg-gray-500 hover:bg-gray-400 cursor-pointer"
        role="button"
      >
        <div
          class="shrink-0 w-4 text-gray-50"
        >
          <svg
            class="transform rotate-90 w-5 h-5 transition-transform"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16 12l-6 6V6z"
              />
            </g>
          </svg>
        </div>
        <div
          class="w-full"
        >
          Label
        </div>
      </div>
      <div
        aria-hidden="false"
        class="rah-static rah-static--height-auto "
        style="height: auto; overflow: visible;"
      >
        <div>
          Hello, World!
        </div>
      </div>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`AccordionRow when rendered with text content should display the text 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="py-3 pr-3 mb-0.5 flex items-center justify-between space-x-3 rounded-lg leading-none text-base text-white select-none pl-3 bg-gray-500 hover:bg-gray-400 cursor-pointer"
        role="button"
      >
        <div
          class="shrink-0 w-4 text-gray-50"
        >
          <svg
            class="transform rotate-90 w-5 h-5 transition-transform"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M16 12l-6 6V6z"
              />
            </g>
          </svg>
        </div>
        <div
          class="w-full"
        >
          Label
        </div>
      </div>
      <div
        aria-hidden="false"
        class="rah-static rah-static--height-auto "
        style="height: auto; overflow: visible;"
      >
        <div>
          Hello, World!
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="py-3 pr-3 mb-0.5 flex items-center justify-between space-x-3 rounded-lg leading-none text-base text-white select-none pl-3 bg-gray-500 hover:bg-gray-400 cursor-pointer"
      role="button"
    >
      <div
        class="shrink-0 w-4 text-gray-50"
      >
        <svg
          class="transform rotate-90 w-5 h-5 transition-transform"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M16 12l-6 6V6z"
            />
          </g>
        </svg>
      </div>
      <div
        class="w-full"
      >
        Label
      </div>
    </div>
    <div
      aria-hidden="false"
      class="rah-static rah-static--height-auto "
      style="height: auto; overflow: visible;"
    >
      <div>
        Hello, World!
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
